# landrush

./: .gitignore  .hgignore  ENV  Makefile  Procfile  README.md  ai.py  app.yaml  field.py  index.html  mail.py  main.py  model.py  pyproject.toml  view.py
css/: main.css
img/: screenshot.xcf  screenshot2.xcf
landrush/: __init__.py  ai.py  field.py  mail.py  model.py  schema.sql  view.py
landrush/static/css/: main.css
landrush/templates/: base.html  game.html  index.html  macros.html  new_game.html  page.html
less/: main.less
templates/: base.html  game.html  index.html  list_games.html  macros.html  new_game.html  page.html
templates/markdown/: rules.html  rules.md
uwsgi/: landrush.ini  landrush.nginx
