[project]
name = "landrush"
version = "0.1.0"
description = "Auction based multiplayer web game"
authors = ["Karl Bartel <mail@karl.berlin>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosql==3.2",
    "apscheduler==3.6.3",
    "flask==1.1.2",
    "itsdangerous==2.0.1",
    "jinja2~=3.0",
    "numpy==1.26.4",
    "werkzeug==1.0.1",
    "wtforms==2.3.3",
]
